# blockquant

./: .env.example  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pytest.ini  self-test.mjs
BlockQuant/: .env.example  README.md  package-lock.json  package.json
backend/: Dockerfile  arch_support.json  pyproject.toml  requirements-test.txt  requirements.txt
backend/scripts/: cleanup_pods.py  fix_repo_card_and_config.py  gen_arch_support.py  list_gpus.py  list_pods.py  log_dashboard.py  publish_quant.py  remote_log_syncer.py  rename_hf_repo_on_complete.py  rescue_upload.py  run_parallel_quants.py  run_runpod_job.py
backend/src/api/: dashboard.py  main.py
backend/src/blockquant/: __init__.py  __main__.py  cards.py  models.py  monitoring.py  pipeline.py  poll.py  receipts.py
backend/src/blockquant/providers/: __init__.py  base.py  local.py  runpod_provider.py
backend/src/blockquant/providers/runpod/: __init__.py  constants.py  deps.py  pricing.py  provider.py
backend/src/blockquant/remote/: model_diff.py  quant.py
backend/src/blockquant/stages/: convert.py  download.py  quality.py  quantize.py  report.py  upload.py  verify.py
backend/src/blockquant/utils/: logger.py
backend/src/scheduler/: celeryconfig.py  tasks.py
backend/templates/: card_template.md
backend/tests/: test_api.py  test_cards.py  test_config.py  test_pipeline.py  test_poll.py  test_receipts.py  test_verify.py
backend/tests/providers/: test_runpod_provider.py
(+454 files in other folders)
